# cerridwen

./: .gitmodules  INSTALL.sh  LICENSE  README.md  cabal.project.dist  cerridwen.cabal
examples/: README.md  test-evaluate.csv  test-evaluateA.csv
examples/Random-Labeled-Elfs/: list.txt
morfran/: evaluate.py  evaluateA.py  evaluateT.py  roc-silent.py  roc.py  scored-label.py
src/Cerridwen/: CLI.hs  Corpus.hs  Hashing.hs  Main.hs  RefDef.hs  Strand.hs  StrandX86.hs  Utils.hs
src/Cerridwen/RefDef/: Assignables.hs  RegX86.hs
