cabal-version:      2.4
name:               cerridwen
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Olivier Savary Belanger
maintainer:         olivier@galois.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable cerridwen
    main-is:          Main.hs
   
    -- Modules included in this executable, other than Main.
    other-modules: Utils,
                   CLI,
                   StrandX86,
                   Hashing,
                   Corpus
                   RefDef.Assignables
                   RefDef.RegX86
    ghc-options: -Wall -Wno-orphans -fspecialise-aggressively -fexpose-all-unfoldings -O2 -optc-O3 -fspecialise-aggressively -fno-prof-auto -fexpose-all-unfoldings -optP-Wno-nonportable-include-path
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions: FlexibleInstances MultiParamTypeClasses
    build-depends:    base ^>=4.14.1.0,
                      bytestring,                      
                      elf-edit >= 0.39,
                      binary,
                      lens >= 5.0.1,
                      prettyprinter >= 1.7.0,                      
                      containers,
                      filepath,
                      directory >= 1.3.6.0,
                      Glob >= 0.9 && < 0.11,
                      flexdis86 >= 0.1.5,
                      binary-symbols >= 0.1.3,                      
                      parameterized-utils,
                      macaw-base,
                      text,
                      optparse-applicative,
                      macaw-x86
    hs-source-dirs:   src/Cerridwen
    default-language: Haskell2010
